mengatur tampilan component

--- a/struktur.html
+++ b/struktur.html
@@ -38,8 +38,8 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top ">
+   <!-- ======= Header ======= -->
+   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo"><a href="index.html">DINAS SOSIAL</a></h1>
@@ -51,13 +51,13 @@
         <ul>
           <li><a href="index.html">Beranda</a></li>
 
-          <li class="drop-down"><a href="#">Profil</a>
+          <li class="drop-down active"  ><a href="#">Profil</a>
             <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
+              <li><a href="visimisi.html">Visi & Misi</a></li>
+              <li class="active"><a href="struktur.html">Struktur Organisasi</a></li>
+              <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
 
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
+              <!-- <li class="drop-down"><a href="#">Deep Drop Down</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
@@ -65,7 +65,7 @@
                   <li><a href="#">Deep Drop Down 4</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </li>
 
@@ -73,7 +73,7 @@
           <li><a href="services.html">Layanan</a></li>
           <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
           <li><a href="galeri.html">Galeri</a></li>
-          <li class="active"><a href="contact.html">Kontak</a></li>
+          <li><a href="contact.html">Kontak</a></li>
 
         </ul>
 
@@ -91,85 +91,26 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Kontak</h2>
+          <h2>Struktur Organisasi</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Kontak</li>
+            <li>Struktur Organisasi</li>
           </ol>
         </div>
 
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
       <div class="container">
 
-        <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!4v1616939617596!6m8!1m7!1s9wcNHN-75tgpa9Uyf99mOg!2m2!1d0.8718086697124899!2d124.0283232773126!3f185.29207294963607!4f1.5396725453559412!5f0.7820865974627469" width="600" height="450" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-        <div class="row mt-5">
-
-          <!-- <div class="col-lg-4"> -->
-            <div class="info">
-              <div class="address">
-                <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
-                <p>Lalow, Lolak, Kabupaten Bolaang Mongondow, Sulawesi Utara</p>
-              </div>
-
-              <div class="email">
-                <i class="icofont-envelope"></i>
-                <h4>Email:</h4>
-                <p>pemerintah@bolmongkab.go.id</p>
-              </div>
-
-              <div class="phone">
-                <i class="icofont-phone"></i>
-                <h4>Call:</h4>
-                <p>+62-</p>
-              </div>
-
-            </div>
-
-          <!-- </div> -->
-
-          <!-- <div class="col-lg-8 mt-5 mt-lg-0">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="form-row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
-                </div>
-                <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                <div class="validate"></div>
-              </div>
-              <div class="mb-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-
-          </div> -->
-
-        </div>
+            <h2>STRUKTUR ORGANISASI</h2>
+            <h3>-</h3>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section><!-- End About Section -->
+
 
   </main><!-- End #main -->
 
