--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About - Sailor Bootstrap Template</title>
+  <title>Dinas sosial bolaang mongondow</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -38,8 +38,8 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top ">
+   <!-- ======= Header ======= -->
+   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo"><a href="index.html">DINAS SOSIAL</a></h1>
@@ -53,11 +53,11 @@
 
           <li class="drop-down"><a href="#">Profil</a>
             <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
+              <li><a href="visimisi.html">Visi & Misi</a></li>
+              <li><a href="struktur.html">Struktur Organisasi</a></li>
+              <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
 
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
+              <!-- <li class="drop-down"><a href="#">Deep Drop Down</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
@@ -65,13 +65,14 @@
                   <li><a href="#">Deep Drop Down 4</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </li>
 
-          <li><a href="services.html">Layanan</a></li>
-          <li><a href="portfolio.html">Galeri</a></li>
           <li><a href="blog.html">Berita</a></li>
+          <li><a href="services.html">Layanan</a></li>
+          <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
           <li><a href="contact.html">Kontak</a></li>
 
         </ul>
