--- a/pricing.html
+++ b/pricing.html
@@ -70,7 +70,7 @@
           </li>
 
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="galeri.html">Portfolio</a></li>
           <li class="active"><a href="pricing.html">Pricing</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
