--- a/berita.html
+++ b/berita.html
@@ -25,15 +25,8 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Sailor - v2.3.1
-  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -55,31 +48,18 @@
             <ul>
               <li><a href="visimisi.html">Visi & Misi</a></li>
               <li><a href="struktur.html">Struktur Organisasi</a></li>
-              <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
-
-              <!-- <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
             </ul>
           </li>
 
-          <li class="active"><a href="blog.html">Berita</a></li>
-          <li><a href="services.html">Layanan</a></li>
+          <li class="active"><a href="berita.html">Berita</a></li>
+          <li><a href="layanan.html">Layanan</a></li>
           <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
           <li><a href="galeri.html">Galeri</a></li>
-          <li><a href="contact.html">Kontak</a></li>
+          <li><a href="kontak.html">Kontak</a></li>
 
         </ul>
 
       </nav><!-- .nav-menu -->
-
-      <a href="index.html" class="get-started-btn ml-auto">Mulai</a>
 
     </div>
   </header><!-- End Header -->
@@ -94,7 +74,7 @@
           <h2>Berita</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Blog</li>
+            <li>Berita</li>
           </ol>
         </div>
 
@@ -431,7 +411,6 @@
   <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
