--- a/galeri.html
+++ b/galeri.html
@@ -9,11 +9,6 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <!-- <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
-
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -25,20 +20,13 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Sailor - v2.3.1
-  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
 
-  <!-- ======= Header ======= -->
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
@@ -56,31 +44,18 @@
             <ul>
               <li><a href="visimisi.html">Visi & Misi</a></li>
               <li><a href="struktur.html">Struktur Organisasi</a></li>
-              <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
-
-              <!-- <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
             </ul>
           </li>
 
-          <li><a href="blog.html">Berita</a></li>
-          <li><a href="services.html">Layanan</a></li>
+          <li><a href="berita.html">Berita</a></li>
+          <li><a href="layanan.html">Layanan</a></li>
           <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
           <li class="active"><a href="galeri.html">Galeri</a></li>
-          <li><a href="contact.html">Kontak</a></li>
+          <li><a href="kontak.html">Kontak</a></li>
 
         </ul>
 
       </nav><!-- .nav-menu -->
-
-      <a href="index.html" class="get-started-btn ml-auto">Mulai</a>
 
     </div>
   </header><!-- End Header -->
@@ -108,7 +83,7 @@
 
     <div class="section-title">
       <h2>Galeri</h2>
-      <p>Terakhir Ditambahkan</p>
+      <p>Foto</p>
     </div>
 
     <div class="row">
@@ -215,7 +190,6 @@
   <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
