--- a/struktur.html
+++ b/struktur.html
@@ -9,10 +9,6 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <!-- <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -25,15 +21,8 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Sailor - v2.3.1
-  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -49,37 +38,24 @@
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li><a href="index.html">Beranda</a></li>
+          <li><a href="index.html active">Beranda</a></li>
 
-          <li class="drop-down active"  ><a href="#">Profil</a>
+          <li class="drop-down"><a href="#">Profil</a>
             <ul>
               <li><a href="visimisi.html">Visi & Misi</a></li>
               <li class="active"><a href="struktur.html">Struktur Organisasi</a></li>
-              <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
-
-              <!-- <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
             </ul>
           </li>
 
-          <li><a href="blog.html">Berita</a></li>
-          <li><a href="services.html">Layanan</a></li>
+          <li><a href="berita.html">Berita</a></li>
+          <li><a href="layanan.html">Layanan</a></li>
           <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
           <li><a href="galeri.html">Galeri</a></li>
-          <li><a href="contact.html">Kontak</a></li>
+          <li><a href="kontak.html">Kontak</a></li>
 
         </ul>
 
       </nav><!-- .nav-menu -->
-
-      <a href="index.html" class="get-started-btn ml-auto">Mulai</a>
 
     </div>
   </header><!-- End Header -->
