menambahkan logo bolmong ke navbar

--- a/berita.html
+++ b/berita.html
@@ -31,14 +31,13 @@
    <header id="header" class="fixed-top ">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">DINAS SOSIAL</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <h1 class="logo"><img src="assets/img/logobolmong.png" alt=""><a href="index.html"> DINAS SOSIAL</a>  
+      </h1>
 
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li><a href="index.html">Beranda</a></li>
+          <li class="active"><a href="index.html">Beranda</a></li>
 
           <li class="drop-down"><a href="#">Profil</a>
             <ul>
@@ -47,7 +46,7 @@
             </ul>
           </li>
 
-          <li class="active"><a href="berita.html">Berita</a></li>
+          <li><a href="berita.html">Berita</a></li>
           <li><a href="layanan.html">Layanan</a></li>
           <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
           <li><a href="galeri.html">Galeri</a></li>
