--- a/blog-single.html
+++ b/blog-single.html
@@ -28,36 +28,37 @@
 
 <body>
 
-    <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top ">
-      <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-  
-        <h1 class="logo"><a href="index.html">DINAS SOSIAL</a></h1>
-  
-        <nav class="nav-menu d-none d-lg-block">
-  
-          <ul>
-            <li><a href="index.html">Beranda</a></li>
-  
-            <li class="drop-down"><a href="#">Profil</a>
-              <ul>
-                <li><a href="visimisi.html">Visi & Misi</a></li>
-                <li><a href="struktur.html">Struktur Organisasi</a></li>
-              </ul>
-            </li>
-  
-            <li class="active"><a href="berita.html">Berita</a></li>
-            <li><a href="layanan.html">Layanan</a></li>
-            <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
-            <li><a href="galeri.html">Galeri</a></li>
-            <li><a href="kontak.html">Kontak</a></li>
-  
-          </ul>
-  
-        </nav><!-- .nav-menu -->
-  
-      </div>
-    </header><!-- End Header -->
+     <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top ">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+
+      <h1 class="logo"><img src="assets/img/logobolmong.png" alt=""><a href="index.html"> DINAS SOSIAL</a>  
+      </h1>
+
+      <nav class="nav-menu d-none d-lg-block">
+
+        <ul>
+          <li class="active"><a href="index.html">Beranda</a></li>
+
+          <li class="drop-down"><a href="#">Profil</a>
+            <ul>
+              <li><a href="visimisi.html">Visi & Misi</a></li>
+              <li><a href="struktur.html">Struktur Organisasi</a></li>
+            </ul>
+          </li>
+
+          <li><a href="berita.html">Berita</a></li>
+          <li><a href="layanan.html">Layanan</a></li>
+          <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
+          <li><a href="kontak.html">Kontak</a></li>
+
+        </ul>
+
+      </nav><!-- .nav-menu -->
+
+    </div>
+  </header><!-- End Header -->
 
   <main id="main">
 
