--- a/struktur.html
+++ b/struktur.html
@@ -27,21 +27,22 @@
 
 <body>
 
-   <!-- ======= Header ======= -->
-   <header id="header" class="fixed-top ">
+    <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top ">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">DINAS SOSIAL</a></h1>
+      <h1 class="logo"><img src="assets/img/logobolmong.png" alt=""><a href="index.html"> DINAS SOSIAL</a>  
+      </h1>
 
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li><a href="index.html active">Beranda</a></li>
+          <li class="active"><a href="index.html">Beranda</a></li>
 
           <li class="drop-down"><a href="#">Profil</a>
             <ul>
               <li><a href="visimisi.html">Visi & Misi</a></li>
-              <li class="active"><a href="struktur.html">Struktur Organisasi</a></li>
+              <li><a href="struktur.html">Struktur Organisasi</a></li>
             </ul>
           </li>
 
