--- a/galeri.html
+++ b/galeri.html
@@ -31,12 +31,13 @@
   <header id="header" class="fixed-top ">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">DINAS SOSIAL</a></h1>
+      <h1 class="logo"><img src="assets/img/logobolmong.png" alt=""><a href="index.html"> DINAS SOSIAL</a>  
+      </h1>
 
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li><a href="index.html">Beranda</a></li>
+          <li class="active"><a href="index.html">Beranda</a></li>
 
           <li class="drop-down"><a href="#">Profil</a>
             <ul>
@@ -48,7 +49,7 @@
           <li><a href="berita.html">Berita</a></li>
           <li><a href="layanan.html">Layanan</a></li>
           <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
-          <li class="active"><a href="galeri.html">Galeri</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
           <li><a href="kontak.html">Kontak</a></li>
 
         </ul>
@@ -57,7 +58,7 @@
 
     </div>
   </header><!-- End Header -->
-
+  
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
