--- a/visimisi.html
+++ b/visimisi.html
@@ -31,16 +31,17 @@
    <header id="header" class="fixed-top ">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">DINAS SOSIAL</a></h1>
+      <h1 class="logo"><img src="assets/img/logobolmong.png" alt=""><a href="index.html"> DINAS SOSIAL</a>  
+      </h1>
 
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li><a href="index.html">Beranda</a></li>
+          <li class="active"><a href="index.html">Beranda</a></li>
 
-          <li class="drop-down active"><a href="#">Profil</a>
+          <li class="drop-down"><a href="#">Profil</a>
             <ul>
-              <li class="active"><a href="visimisi.html">Visi & Misi</a></li>
+              <li><a href="visimisi.html">Visi & Misi</a></li>
               <li><a href="struktur.html">Struktur Organisasi</a></li>
             </ul>
           </li>
