--- a/berita.html
+++ b/berita.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Blog - Sailor Bootstrap Template</title>
+  <title>Dinas sosial bolaang mongondow</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,7 +37,7 @@
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li class="active"><a href="index.html">Beranda</a></li>
+          <li><a href="index.html">Beranda</a></li>
 
           <li class="drop-down"><a href="#">Profil</a>
             <ul>
@@ -46,7 +46,7 @@
             </ul>
           </li>
 
-          <li><a href="berita.html">Berita</a></li>
+          <li class="active"><a href="berita.html">Berita</a></li>
           <li><a href="layanan.html">Layanan</a></li>
           <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
           <li><a href="galeri.html">Galeri</a></li>
