--- a/blog-single.html
+++ b/blog-single.html
@@ -38,7 +38,7 @@
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li class="active"><a href="index.html">Beranda</a></li>
+          <li><a href="index.html">Beranda</a></li>
 
           <li class="drop-down"><a href="#">Profil</a>
             <ul>
