--- a/galeri.html
+++ b/galeri.html
@@ -37,7 +37,7 @@
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li class="active"><a href="index.html">Beranda</a></li>
+          <li><a href="index.html">Beranda</a></li>
 
           <li class="drop-down"><a href="#">Profil</a>
             <ul>
@@ -49,7 +49,7 @@
           <li><a href="berita.html">Berita</a></li>
           <li><a href="layanan.html">Layanan</a></li>
           <li><a href="https://ppid.bolmongkab.go.id">PPID</a></li>
-          <li><a href="galeri.html">Galeri</a></li>
+          <li class="active"><a href="galeri.html">Galeri</a></li>
           <li><a href="kontak.html">Kontak</a></li>
 
         </ul>
