--- a/visimisi.html
+++ b/visimisi.html
@@ -37,11 +37,11 @@
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li class="active"><a href="index.html">Beranda</a></li>
+          <li><a href="index.html">Beranda</a></li>
 
-          <li class="drop-down"><a href="#">Profil</a>
+          <li class="drop-down active"><a href="#">Profil</a>
             <ul>
-              <li><a href="visimisi.html">Visi & Misi</a></li>
+              <li class="active"><a href="visimisi.html">Visi & Misi</a></li>
               <li><a href="struktur.html">Struktur Organisasi</a></li>
             </ul>
           </li>
